# parascopes

./: .gitignore  README.md  pyproject.toml  solutions.py
src/: 02_download_residuals.py  02_get_embeds_new.py  02_get_residuals_new.py  02_upload_embeds.py  02_upload_residuals.py  03_basic_linear.py  03_basic_linear_single.py  03_continuation_parascope.py  04_decode_inferred_embeds.py  04_gen_baseline.py  04_get_original_texts.py  04_infer_embeds.py  05_get_rubric_comparison.py  05_process_rubrics.py  06_plot_bleu_scores.py  06_plot_cossim.py  06_plot_cossim_continutation.py  06_plot_cossim_multimodel.py  06_plot_outline_rubric.py  06_plot_rubric.py  basic_linear.py  decode_inferred_embeds.py  get_residuals.py  get_residuals_new.py  get_text_embeddings.py  infer_embeds.py  plot_cossim.py  plot_rubric.py  upload_residuals.py  utils_load_data.py  utils_plot.py  utils_sonar.py  utils_train.py  utils_train_layer.py  utils_welford.py
src/yulia/: .gitignore
src/yulia/outlines/: 01_check_outline_quality.py  01_run_parallel_outline_gen_pipeline.py  02_generate_embedding_chunks.sh  02_generate_embeddings.py  02_upload_outlines.py  03_normalizers.py  03_probe_config.py  03_probe_runner.py  03_run_all_gemma_probes.sh  04_evaluate_gemma_probes.ipynb  config.py  config_probe.py  evaluate_probe.ipynb  generate_embedding_chunks.sh  hf_utils.py  probe_runner.py  ruberic_llama_70B_outline_VS_ gemma_27b_outline.ipynb  ruberic_llama_70B_outline_VS_llama-3b_decoded.ipynb  run_all_gemma_probes.sh  train_probe.py  train_probe_old.py  upload_embeddings.py  utils_load_data.py  utils_normalizers.py  utils_train.py  wandb_tracker.py
src/yulia/outlines/deprecated/: train_probe_old.py
